--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Dad">
-        <activity android:name=".MoviceActivity"
+        <activity android:name=".MovieActivity"
             android:screenOrientation="landscape">
         </activity>
         <activity android:name=".MainActivity">
